# summer-practice-2022

./: .gitignore  Makefile  README.md
client/: package-lock.json  package.json
client/.parcel-cache/: 03d7287033e1859d  181274051922b0ef  2fc3881870e9181d  5fed6fe4c7f037f6  636293eaad89690b.txt  699841e33acbaee2  73b59e41ad90a83b  a39519cf176a72e1  f4e012b00d0c8067  lock.mdb
client/src/: index.html  main.ts
program/: Cargo.toml
program/src/: lib.rs
python/: main.py
wallets/: id.json  program.json  test.json  testers.json
